2014-09-16  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* rt/vm.cc (VM::Environment::Environment): Define.
	(VM::Environment::~Environment): Likewise.
	(VM::Symbol::Symbol): Rework.
	(VM::BasicContext::make_package): Define.
	(VM::BasicContext::make_keyword): Likewise.
	(VM:BasicContext::make_symbol): Remove.
	(VM::BasicContext::make_operator): Tidy.
	* include/vm.H (VM::to_bool): New.
	(VM::to_value): Likewise.
	(VM::SymbolAttribute): Likewise.
	(VM::Symbol): Rework.
	(VM::CmpByName): New helper class.
	(VM::setf_symbol_function): New helper function.
	(VM::Environment): Move from Lisp.H.
	(VM::FunctionBase): Derive from VM::Callable.
	* include/sexpr.H (Sexpr::SymbolSyntax::Kind): Now bitmask type.
	(Sexpr::binary_form): New.
	(Sexpr::Include): Derive from it.
	(Sexpr::Exclude): Likewise.
	(Sexpr::Allocator): Adjust.
	* syntax/sexpr.cc (Sexpr::finish_include): New.
	(Sexpr::finish_exclude): Likewise.
	(Sexpr::read_sharp_et_al): Use them.
	* include/Lisp.H: Adjust.  Move Environment to vm.H.
	(Lisp::Evaluator): Tidy.
	* rt/Lisp.cc (define_special_value_constants): New.
	(Lisp::Evaluator::Evaluator): Call it.

2014-08-26  Raoul B.  <raoulb@bluewin.ch>

	* algebra/combfunc.spad.pamphlet
	(iBesselKGrad)[FunctionalSpecialFunction]:  Fix thinko.

2014-08-26  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* Makefile.am (oa_src_include_headers): Remove.  These headers are
	now linked by configure.
	* boot/Makefile.am (noinst_PROGRAMS): Add bemol.
	(bemol_SOURCES): New.
	(bemol_LDADD): Likewise.
	(AM_CXXFLAGS): Set.
	* boot/bemol.cc: New file.  Initial tokenizer.
	* include/sexpr.H: Tidy.
	* include/token-value.def: New file.
	* include/token.H: Expand.  Add generic tokenizer.
	* syntax/token.cc: Rework.
	* interp/simpbool.boot (list1): Escape leading question mark of ?ORDER.
	(ordUnion): Likewise.

2014-08-17  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* boot/Makefile.am: New.
	* boot/Makefile.in: Regenerate.
